[Feat] Blog 기능 개발

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 # 서버 포트를 변경한다
-server.port=8082
+server.port=8000
 
 # swagger -> uri 경로를 정의
 springdoc.swagger-ui.path= /swagger
 
 # swagger -> uri 정렬
 springdoc.swagger-ui.operations-sorter= method
+
+# thymeleaf 파일 경로 지정
+spring.thymeleaf.prefix=classPath:/templates/
+
+# thymeleaf 파일 확장자 지정
+spring.thymeleaf.suffix=.html
