--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     // ✅ 나머지 필요 의존성
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
     testImplementation 'com.h2database:h2:2.2.224'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
