[feat] blog CRUD API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,10 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=8000
 
 # swagger -> uri 경로를 정의
-springdoc.swagger-ui.path= /swagger
+springdoc.swagger-ui.path=/swagger
 
 # swagger -> uri 정렬
-springdoc.swagger-ui.operations-sorter= method
+springdoc.swagger-ui.operations-sorter=method
 
 # thymeleaf 파일 경로 지정
 spring.thymeleaf.prefix=classPath:/templates/
